--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "@legendapp/motion": "latest",
     "@unitools/image": "^0.0.4",
     "expo-image": "^1.12.9",
-    "nativewind": "4.0.36",
+    "nativewind": ">=4.0",
     "react-native-reanimated": "latest",
     "react-native-svg": "^15.2.0",
     "tailwindcss": "3.4.3"
